More CanExecuteResponse refactoring, logic fixes, and more logging